The project is done just make sure to adapt the styling to your screen this website is not responsive !

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,6 +4,12 @@ html{
  padding: 1.5rem;
  /* width: 100%; */
 }
+/* body{
+ margin: 0;
+ width: 100vw;
+ height: 100vh;
+ overflow-x: hidden;
+} */
 header{
  background-color: black;
  color: white;
